--- a/pages/bills.mustache
+++ b/pages/bills.mustache
@@ -7,13 +7,91 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/fonts.css" rel="stylesheet" type="text/css" media="all" />
 
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 </head>
 <body>
+	<style>
+	#portfolio{
+		text-align:center;
+	}
+	.search {
+    color: rgb(52, 73, 94);
+    height: 42px;
+    text-decoration: none solid rgb(52, 73, 94);
+    text-size-adjust: 100%;
+    width: 212.5px;
+    column-rule-color: rgb(52, 73, 94);
+    perspective-origin: 106.25px 21px;
+    caret-color: rgb(52, 73, 94);
+    background: rgb(255, 255, 255) none repeat scroll 0% 0% / auto padding-box padding-box;
+    border: 2px solid rgb(189, 195, 199);
+    border-radius: 6px 6px 6px 6px;
+    font: normal normal 400 normal 15px / 22.005px Lato, Helvetica, Arial, sans-serif;
+    outline: rgb(52, 73, 94) none 0px;
+    padding: 8px 12px;
+    transition: border 0.25s linear 0s, color 0.25s linear 0s, background-color 0.25s linear 0s;
+}/*#INPUT_1*/
+
+.search:after {
+    box-sizing: border-box;
+    color: rgb(52, 73, 94);
+    text-decoration: none solid rgb(52, 73, 94);
+    text-size-adjust: 100%;
+    column-rule-color: rgb(52, 73, 94);
+    caret-color: rgb(52, 73, 94);
+    border: 0px none rgb(52, 73, 94);
+    font: normal normal 400 normal 15px / 22.005px Lato, Helvetica, Arial, sans-serif;
+    outline: rgb(52, 73, 94) none 0px;
+}/*#INPUT_1:after*/
+
+.search:before {
+    box-sizing: border-box;
+    color: rgb(52, 73, 94);
+    text-decoration: none solid rgb(52, 73, 94);
+    text-size-adjust: 100%;
+    column-rule-color: rgb(52, 73, 94);
+    caret-color: rgb(52, 73, 94);
+    border: 0px none rgb(52, 73, 94);
+    font: normal normal 400 normal 15px / 22.005px Lato, Helvetica, Arial, sans-serif;
+    outline: rgb(52, 73, 94) none 0px;
+}/*#INPUT_1:before*/
+
+button {
+	display: inline-block;
+	 border: none;
+	 padding: 1rem 2rem;
+	 margin: 20px;
+	 text-decoration: none;
+	 background: #0069ed;
+	 color: #ffffff;
+	 font-family: sans-serif;
+	 font-size: 1rem;
+	 cursor: pointer;
+	 text-align: center;
+	 transition: background 250ms ease-in-out,
+							 transform 150ms ease;
+	 -webkit-appearance: none;
+	 -moz-appearance: none;
+}
+button:focus {
+  outline: none
+}
+.card{
+	width: 400px;
+	height: 230px;
+	width: 50%;
+ margin: 0 auto;
+ padding: 20px;
+ border-radius: 20px;
+margin-top: 40px;
+border: 1px solid #6C2A6A;
+}
+
+	</style>
 <div id="wrapper1">
 	<div id="header-wrapper">
 		<div id="header" class="container">
@@ -35,44 +113,36 @@
 	<div id="wrapper2">
 		<div id="welcome" class="container">
 			<div class="title">
-				<h2>Welcome to our website</h2>
+				<h2>Bills</h2>
 			</div>
-			<p>This is <strong>Embellished</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+			<p>This page is dedicated towards grouping active bills in the U.S. Congress so you can track the actions of legislators</p>
 		</div>
 	</div>
 	<div id="wrapper3">
 		<div id="portfolio" class="container">
-			<div class="title">
-				<h2>Vivamus fermentum nibh</h2>
-				<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> </div>
-			<div class="column1">
-				<div class="box">
-					<span class="icon icon-wrench"></span>
-					<h3>Vestibulum venenatis</h3>
-					<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
-			<div class="column2">
-				<div class="box">
-					<span class="icon icon-trophy"></span>
-					<h3>Praesent scelerisque</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
-			<div class="column3">
-				<div class="box">
-					<span class="icon icon-key"></span>
-					<h3>Donec dictum metus</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
-			<div class="column4">
-				<div class="box">
-					<span class="icon icon-lock"></span>
-					<h3>Mauris vulputate dolor</h3>
-					<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
+
+			<form method="post" action="/bills/search" style="margin-bottom: 20px;">
+				<input class="search" type="text" name="keyword" placeholder="Search for bills...">
+				<button type="submit">Search</button>
+			</form>
+
+			{{#bills}}
+  <div class="card">
+		<h3>{{short_title}}</h3>
+		<div style="display: inline-flex; margin-top: 22px;">
+		<span style="margin-right: 25px;"><b>Sponsor:</b> {{sponsor_name}}</span>
+		 <span style="margin-right: 25px;"><b>Sponsor Party:</b> {{sponsor_party}}</span>
+		<span><b>Status Active? </b> {{active}}</span>
+	</div>
+	<br />
+	<p style="margin-top: 20px;">
+{{congressdotgov_url}}
+</p>
+<p style="margin-top: 20px;">
+	{{latest_major_action}}
+</p>
+	</div>
+{{/bills}}
 		</div>
 	</div>
 </div>
