--- a/pages/register.mustache
+++ b/pages/register.mustache
@@ -3,22 +3,108 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
+<title>PoliApp - Registration</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/fonts.css" rel="stylesheet" type="text/css" media="all" />
 
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 </head>
 <body>
+	<style media="screen">
+	#portfolio{
+		text-align:center;
+	}
+	.search {
+		color: rgb(52, 73, 94);
+		height: 42px;
+		text-decoration: none solid rgb(52, 73, 94);
+		text-size-adjust: 100%;
+		width: 212.5px;
+		column-rule-color: rgb(52, 73, 94);
+		perspective-origin: 106.25px 21px;
+		caret-color: rgb(52, 73, 94);
+		background: rgb(255, 255, 255) none repeat scroll 0% 0% / auto padding-box padding-box;
+		border: 2px solid rgb(189, 195, 199);
+		border-radius: 6px 6px 6px 6px;
+		font: normal normal 400 normal 15px / 22.005px Lato, Helvetica, Arial, sans-serif;
+		outline: rgb(52, 73, 94) none 0px;
+		padding: 8px 12px;
+		transition: border 0.25s linear 0s, color 0.25s linear 0s, background-color 0.25s linear 0s;
+}/*#INPUT_1*/
+
+.search:after {
+		box-sizing: border-box;
+		color: rgb(52, 73, 94);
+		text-decoration: none solid rgb(52, 73, 94);
+		text-size-adjust: 100%;
+		column-rule-color: rgb(52, 73, 94);
+		caret-color: rgb(52, 73, 94);
+		border: 0px none rgb(52, 73, 94);
+		font: normal normal 400 normal 15px / 22.005px Lato, Helvetica, Arial, sans-serif;
+		outline: rgb(52, 73, 94) none 0px;
+}/*#INPUT_1:after*/
+
+.search:before {
+		box-sizing: border-box;
+		color: rgb(52, 73, 94);
+		text-decoration: none solid rgb(52, 73, 94);
+		text-size-adjust: 100%;
+		column-rule-color: rgb(52, 73, 94);
+		caret-color: rgb(52, 73, 94);
+		border: 0px none rgb(52, 73, 94);
+		font: normal normal 400 normal 15px / 22.005px Lato, Helvetica, Arial, sans-serif;
+		outline: rgb(52, 73, 94) none 0px;
+}/*#INPUT_1:before*/
+
+	button {
+		display: inline-block;
+		 border: none;
+		 padding: 1rem 2rem;
+		 margin: 20px;
+		 text-decoration: none;
+		 background: #0069ed;
+		 color: #ffffff;
+		 font-family: sans-serif;
+		 font-size: 1rem;
+		 cursor: pointer;
+		 text-align: center;
+		 transition: background 250ms ease-in-out,
+								 transform 150ms ease;
+		 -webkit-appearance: none;
+		 -moz-appearance: none;
+	}
+	button:focus {
+		outline: none
+	}
+	.card{
+		width: 400px;
+		height: 250px;
+		width: 50%;
+	 margin: 0 auto;
+	 padding: 20px;
+	 border-radius: 20px;
+	margin-top: 40px;
+	border: 1px solid #6C2A6A;
+	}
+	.contestcard{
+		border-radius: 20px;
+		width: 400px;
+		width: 50%;
+	 margin: 0 auto;
+	 padding: 20px;
+	margin-top: 40px;
+	border: 1px solid #6C2A6A;
+	}
+	</style>
 <div id="wrapper1">
 	<div id="header-wrapper">
 		<div id="header" class="container">
 			<div id="logo"> <span class="icon icon-globe"></span>
-				<h1><a href="/">PoliApp</a></h1>
+				<h1><a href="/">Registration</a></h1>
 				<span>hackUMBC 2018 </div>
 			<div id="menu">
 				<ul>
@@ -35,44 +121,93 @@
 	<div id="wrapper2">
 		<div id="welcome" class="container">
 			<div class="title">
-				<h2>Welcome to our website</h2>
+				<h2>Register to vote</h2>
 			</div>
-			<p>This is <strong>Embellished</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+			<p>This page is dedicated to educating you on how to vote, participate in polls, and other activities...</p>
 		</div>
 	</div>
 	<div id="wrapper3">
 		<div id="portfolio" class="container">
 			<div class="title">
-				<h2>Vivamus fermentum nibh</h2>
-				<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> </div>
-			<div class="column1">
-				<div class="box">
-					<span class="icon icon-wrench"></span>
-					<h3>Vestibulum venenatis</h3>
-					<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
-			<div class="column2">
-				<div class="box">
-					<span class="icon icon-trophy"></span>
-					<h3>Praesent scelerisque</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
-			<div class="column3">
-				<div class="box">
-					<span class="icon icon-key"></span>
-					<h3>Donec dictum metus</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
-			<div class="column4">
-				<div class="box">
-					<span class="icon icon-lock"></span>
-					<h3>Mauris vulputate dolor</h3>
-					<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
+				<h2>Voting Locations Near You</h2>
+				<span class="byline">(places to vote based on local location)</span> </div>
+                <div style="display: flex; justify-content: center;">
+									<button onclick="geoFindMe()">Show my location</button></div>
+								<br />
+									<form method="post" action="/register/search" style="margin-bottom: 20px;">
+										<input class="search" id="search" type="text" name="location" placeholder="Search for ...">
+										<button type="submit">Search</button>
+									</form>
+									<div id="out">
+										{{#show}}
+										<h2>Polling Locations</h2>
+										{{/show}}
+										{{#pollingLocations}}
+										<div class="card">
+											<h1>{{address.locationName}}</h1>
+											<div style="display: inline-flex; margin-top: 22px;">
+											<span style="margin-right: 25px;"><b>Zip:</b> {{address.zip}}</span>
+											<span><b>State:</b> {{address.state}}</span>
+										</div>
+										<br />
+										<p style="margin-top: 20px;">
+									Address: {{address.line1}}
+									</p>
+									<p style="margin-top: 20px;">
+										<b>Hours:</b> {{pollingHours}}
+									</p>
+										</div>
+										{{/pollingLocations}}
+										{{#show}}
+										<h2 style="margin-top: 40px;">Early Voting Sites</h2>
+										{{/show}}
+										{{#earlyVoteSites}}
+										<div class="card">
+											<h1>{{address.locationName}}</h1>
+											<div style="display: inline-flex; margin-top: 22px;">
+											<span style="margin-right: 25px;"><b>Zip:</b> {{address.zip}}</span>
+											<span><b>State:</b> {{address.state}}</span>
+										</div>
+										<br />
+										<p style="margin-top: 20px;">
+									Address: {{address.line1}}
+									</p>
+									<p style="margin-top: 20px;">
+										<b>Hours:</b> {{pollingHours}}
+									</p>
+										</div>
+										{{/earlyVoteSites}}
+										{{#show}}
+										<h2 style="margin-top: 40px;">Contests</h2>
+										{{/show}}
+										{{#contests}}
+										<div class="contestcard">
+											<h1>{{type}}</h1>
+											<div style="display: inline-flex; margin-top: 22px;">
+												{{#hasOffice}}
+											<span style="margin-right: 25px;"><b>Office:</b> {{office}}</span>
+											{{/hasOffice}}
+											<span style="margin-right: 25px;"><b>District:</b> {{district.name}}</span>
+										</div>
+										<br />
+										{{#showText}}
+										<p>{{referendumText}}</p>
+										{{/showText}}
+							
+										{{#candidates}}
+										<div style="display: inline-flex; margin-top: 22px;">
+										<span style="margin-right: 25px;"><b>Name:</b> {{name}}</span>
+										<span style="margin-right: 25px;"><b>Party:</b> {{party}}</span>
+									</div>
+									<div style="display: inline-flex; margin-top: 22px;">
+									<span style="margin-right: 25px;">Email: {{email}}</span>
+									<span style="margin-right: 25px;">Phone: {{phone}}</span>
+								</div>
+										{{/candidates}}
+										</div>
+										{{/contests}}
+									</div>
+
 		</div>
 	</div>
 </div>
@@ -91,5 +226,40 @@
 <div id="copyright" class="container">
 	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 </div>
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript">
+	function geoFindMe(){
+		loc={
+    latitude:'',
+    longitude:''
+};
+
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position){
+					loc.latitude=position.coords.latitude;
+    loc.longitude=position.coords.longitude;
+
+		var geocoder = new google.maps.Geocoder();
+    var latLng = new google.maps.LatLng(loc.latitude, loc.longitude);
+
+ if (geocoder) {
+    geocoder.geocode({ 'latLng': latLng}, function (results, status) {
+       if (status == google.maps.GeocoderStatus.OK) {
+         var search = document.getElementById("search")
+				 console.log(results)
+				 search.value = results[1].formatted_address
+       }
+       else {
+        console.log("Geocoding failed: " + status);
+       }
+    });
+  }
+				});
+    } else {
+        console.log("Not supported")
+    }
+
+	}
+</script>
 </body>
 </html>
