--- a/pages/register.mustache
+++ b/pages/register.mustache
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -9,16 +9,12 @@
 	<meta name="description" content="" />
 	<meta name="viewport" content="initial-scale=1.0,
       width=device-width" />
-    <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js"
-      type="text/javascript" charset="utf-8"></script>
-    <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js"
-      type="text/javascript" charset="utf-8"></script>
-    <script src="http://js.api.here.com/v3/3.0/mapsjs-ui.js"
-      type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css"
-      href="http://js.api.here.com/v3/3.0/mapsjs-ui.css" />
-			<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
-	<link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+			<link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css" />
+ <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+ <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
+ <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+ <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+  	<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
 	<link href="/default.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/fonts.css" rel="stylesheet" type="text/css" media="all" />
 
